examples/invalid/program9.c
int main(void) {
    int x = 5;
    int = 10;
    return x;
}

